# AsyncTaskProgram

./: .gitignore  CMakeLists.txt  CommandParser.cpp  CommandParser.h  README.md  main.cpp
AsyncTaskLib/: CMakeLists.txt  README.md
AsyncTaskLib/include/: ASynchronousTask.h  ASynchronousTaskAlgoA.h  ASynchronousTaskAlgoB.h  Definitions.h  TaskState.h  TaskStateMachine.h  ThreadPool.h
AsyncTaskLib/sources/: ASynchronousTask.cpp  TaskStateMachine.cpp  ThreadPool.cpp
AsyncTaskLib/tests/: CMakeLists.txt  unit_ASynchronousTask.cpp  unit_StateMachineTest.cpp  unit_ThreadPool.cpp
Example/: main.cpp
Example/sources/: CommandParser.cpp  CommandParser.h  CommandType.h
resources/jobs/: jobs.qrc
sources/: ASynchronousTask.cpp  ASynchronousTask.h  CommandParser.cpp  CommandParser.h  Task.cpp  Task.h  TaskStateMachine.cpp  TaskStateMachine.h  ThreadPool.cpp
tests/: CMakeLists.txt  unit_CommandParser.cpp
